k8s/ingress/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-kong-services
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /secure/httpbin
            pathType: ImplementationSpecific
            backend:
              service:
                name: httpbin
                port:
                  number: 80
